[package]
name = "jcat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = {version="4.5.23", features=["derive"]}
flate2 = "1.0.35"
indicatif = { version = "0.17.9", features = ["rayon"] }
rayon = "1.10.0"
serde = {version="1.0.215", features=["derive"]}
serde_json = "1.0.133"
snap = "1.1.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[lints.rust]
unsafe_code = "forbid"
